# lens-regex

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  lens-regex.cabal
.github/workflows/: haskell.yml
sample/: sample.hs
src/Text/Regex/: Lens.hs  Quote.hs
tests/: doctests.hs
