name:                lens-regex
version:             0.1.0
synopsis:            Lens powered regular expression
description:         Lens powered regular expression
license:             BSD3
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          Takahiro HIMURA <taka@himura.jp>
copyright:           Copyright (C) 2015 Takahiro HIMURA
category:            Text
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  .gitignore
  README.md
  CHANGELOG.md
  sample/*.hs

flag build-samples
  description: build samples
  default: False

library
  exposed-modules:     Text.Regex.Lens
                       Text.Regex.Quote
  build-depends:       base >= 4.7 && < 4.8
                     , array
                     , lens >= 4 && < 5
                     , regex-base
                     , template-haskell
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable sample
  main-is: sample.hs
  hs-source-dirs: sample

  if !flag(build-samples)
    buildable: False
  else
    build-depends:     base >= 4.7 && < 4.8
                     , lens
                     , lens-regex
                     , regex-posix
    ghc-options:       -Wall
    default-language:  Haskell2010
